--- a/proj-2/balancebeam/Cargo.toml
+++ b/proj-2/balancebeam/Cargo.toml
@@ -14,9 +14,10 @@ log = "0.4"
 env_logger = "0.7"
 pretty_env_logger = "0.4"
 threadpool = "1.8"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.2.25", features = ["full", "time"] }
 rand = "0.7"
 parking_lot = "0.10"
+async-std = "1.9"
 
 [dev-dependencies]
 nix = "0.17"
